fix(ext/cfx-ui): truncate server title in server tile

--- a/ext/cfx-ui/src/cfx/common/parts/Server/ServerTitle/ServerTitle.module.scss
+++ b/ext/cfx-ui/src/cfx/common/parts/Server/ServerTitle/ServerTitle.module.scss
@@ -17,4 +17,13 @@
   &.size-xxxlarge {
     @include ui.font-size('xxxlarge');
   }
+
+  &.truncated {
+    width: 100%;
+
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+    overflow: hidden;
+  }
 }
